--- a/.github/workflows/push-run-pyfile.yml
+++ b/.github/workflows/push-run-pyfile.yml
@@ -38,8 +38,8 @@ jobs:
 #          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
 #          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
-      # sam build
+      # SAM build
       - run: sam build --use-container
 
-      # sam deploy
+      # SAM deploy
       - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket testtaskunkd --capabilities CAPABILITY_IAM --region us-east-2
