--- a/.github/workflows/push-run-pyfile.yml
+++ b/.github/workflows/push-run-pyfile.yml
@@ -1,45 +1,18 @@
-#name: Run my greeting
-#
-#on: push
-#
-#jobs:
-#  build:
-#    runs-on: ubuntu-latest
-#
-#    steps:
-#      - name: Checkout repo content
-#        uses: actions/checkout@v2 # checkout the repository content to github runner.
-#      - name: Setup python
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: 3.8 #install the python needed
-#      - name: Execute py script # run the run.py to print greeting
-#        run: |
-#          python run.py
+name: Run my greeting
 
-name: Run via AWS
-on:
-  push:
-    branches:
-      - main
+on: push
+
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content to github runner
+        uses: actions/checkout@v2 # checkout the repository content to github runner.
       - name: Setup python
         uses: actions/setup-python@v2
-      - name: Setup SAM
-        uses: aws-actions/setup-sam@v1
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
         with:
-#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-2
-      # SAM build
-      - run: sam build --use-container
-
-      # SAM deploy
-      - run: sam deploy --no-confirm-changeset --no-fail-on-empty-changeset --stack-name sam-hello-world --s3-bucket testtaskunkd --capabilities CAPABILITY_IAM --region us-east-2
+          python-version: 3.8 #install the python needed
+      - name: Execute py script # run the run.py to print greeting
+        run: |
+          python run.py
